--- a/ODK.Web.Razor/Views/Shared/Admin/Events/_EventForm.cshtml
+++ b/ODK.Web.Razor/Views/Shared/Admin/Events/_EventForm.cshtml
@@ -28,14 +28,24 @@
 
 <div class="form-group mb-3 required">
     @Html.LabelFor(x => x.Venue, new { @class = "form-label" })
-    @await Html.PartialAsync("Components/_Tooltip", "Select an existing venue or create a new venue first on the venues page")
+    @await Html.PartialAsync("Components/_Tooltip", "Select an existing venue or create a new venue first on the venues page")    
     @Html.DropDownListFor(x => x.Venue, venueOptions, "", new { @class = "form-select" })
     @Html.ValidationMessageFor(x => x.Venue)
 </div>
 
 <div class="form-group mb-3 required">
     @Html.LabelFor(x => x.Date, new { @class = "form-label" })
-    @Html.TextBoxFor(x => x.Date, format: "{0:dd/MM/yyyy}", new { @class = "form-control", data_datepicker = "" })
+    @await Html.PartialAsync("Components/_Tooltip", "Event date. Start time defaults to value set in event settings")
+    @if (Model.Date.Date == Model.Date)
+    {
+        <a href="/@Model.ChapterName/Admin/Events/Settings">Set default start time</a>
+    }    
+    @Html.TextBoxFor(x => x.Date, format: "{0:dd/MM/yyyy HH:mm}", new 
+    { 
+        @class = "form-control", 
+        data_datepicker = "", 
+        data_datepicker_time = "" 
+    })
     @Html.ValidationMessageFor(x => x.Date)
 </div>
 
