--- a/ODK.Web.Razor/Views/Shared/Admin/Events/_SettingsForm.cshtml
+++ b/ODK.Web.Razor/Views/Shared/Admin/Events/_SettingsForm.cshtml
@@ -18,12 +18,20 @@
 </div>
 
 <div class="form-group mb-3">
+    @Html.LabelFor(x => x.DefaultStartTime, new { @class = "form-label" })
+    @await Html.PartialAsync("Components/_Tooltip", "Default event start time when creating new events (24 hour clock, HH:MM)")
+    @Html.TextBoxFor(x => x.DefaultStartTime, new { @class = "form-control" })
+    @Html.ValidationMessageFor(x => x.DefaultStartTime)
+</div>
+
+<div class="form-group mb-3">
     @Html.LabelFor(x => x.DefaultScheduledEmailDayOfWeek, new { @class = "form-label" })
     @Html.DropDownListFor(x => x.DefaultScheduledEmailDayOfWeek, dayOfWeekOptions, " ", new { @class = "form-select" })
 </div>
 
 <div class="form-group mb-3">
     @Html.LabelFor(x => x.DefaultScheduledEmailTimeOfDay, new { @class = "form-label" })
+    @await Html.PartialAsync("Components/_Tooltip", "Default scheduled email time when creating new events (24 hour clock, HH:MM)")
     @Html.TextBoxFor(x => x.DefaultScheduledEmailTimeOfDay, new { @class = "form-control" })
     @Html.ValidationMessageFor(x => x.DefaultScheduledEmailTimeOfDay)
 </div>
