--- a/ODK.Web.Razor/Views/Shared/Events/_EventContent.cshtml
+++ b/ODK.Web.Razor/Views/Shared/Events/_EventContent.cshtml
@@ -32,11 +32,18 @@
 })
 
 <h2>@Model.Venue.Name</h2>
-<h4>@localTime.EventDate(true)</h4>
+<h4>@localTime.ToFriendlyDateString(Model.Chapter.TimeZone)</h4>
 
 @if (localTime.TimeOfDay.TotalSeconds > 0)
 {
-    <h5>@localTime.ToString("HH:mm")</h5>
+    <h5>
+        <span>@localTime.ToString("HH:mm")</span>
+        @if (Model.Event.EndTime != null)
+        {
+            <span>-</span>
+            <span>@TimeSpanUtils.ToString(Model.Event.EndTime)</span>
+        }
+    </h5>
 }
 else if (!string.IsNullOrEmpty(Model.Event.Time))
 {
