--- a/ODK.Web.Razor/Views/Shared/Events/_EventContent.cshtml
+++ b/ODK.Web.Razor/Views/Shared/Events/_EventContent.cshtml
@@ -6,9 +6,7 @@
 @using ODK.Web.Razor.Models.Events
 @model EventPageViewModel
 @{
-    var localTime = Model.Event.Date.TimeOfDay.TotalSeconds > 0
-        ? Model.Chapter.ToChapterTime(Model.Event.Date)
-        : Model.Event.Date;
+    var localTime = Model.Event.ToLocalTime(Model.Chapter.TimeZone);
 }
 
 @await Html.PartialAsync("Components/_AdminBar", new AdminBarViewModel
@@ -32,7 +30,7 @@
 })
 
 <h2>@Model.Venue.Name</h2>
-<h4>@localTime.ToFriendlyDateString(Model.Chapter.TimeZone)</h4>
+<h4>@localTime.ToFriendlyDateString(null)</h4>
 
 @if (localTime.TimeOfDay.TotalSeconds > 0)
 {
