Default end date

--- a/ODK.Web.Razor/Views/Shared/Admin/Events/_SettingsContent.cshtml
+++ b/ODK.Web.Razor/Views/Shared/Admin/Events/_SettingsContent.cshtml
@@ -22,6 +22,7 @@
     {
         DefaultDayOfWeek = settings?.DefaultDayOfWeek,
         DefaultDescription = settings?.DefaultDescription,
+        DefaultEndTime = TimeSpanUtils.ToString(settings?.DefaultEndTime),
         DefaultScheduledEmailDayOfWeek = settings?.DefaultScheduledEmailDayOfWeek,
         DefaultScheduledEmailTimeOfDay = TimeSpanUtils.ToString(settings?.DefaultScheduledEmailTimeOfDay),
         DefaultStartTime = TimeSpanUtils.ToString(settings?.DefaultStartTime),
