--- a/ODK.Web.Razor/Views/Shared/Admin/Events/_EventCreateContent.cshtml
+++ b/ODK.Web.Razor/Views/Shared/Admin/Events/_EventCreateContent.cshtml
@@ -1,4 +1,5 @@
-﻿@using ODK.Services
+﻿@using ODK.Core.Utils
+@using ODK.Services
 @using ODK.Services.Chapters
 @using ODK.Services.Events
 @using ODK.Web.Common.Extensions
@@ -36,6 +37,7 @@
         CurrencySymbol = chapterPaymentSettings?.Currency.Symbol,
         Date = nextEventDate,
         Description = settings?.DefaultDescription,
+        EndTime = TimeSpanUtils.ToString(settings?.DefaultEndTime),
         HostOptions = hostOptions
     })
     
