--- a/ODK.Web.Razor/Views/Shared/Admin/Events/_EventForm.cshtml
+++ b/ODK.Web.Razor/Views/Shared/Admin/Events/_EventForm.cshtml
@@ -50,7 +50,7 @@
 </div>
 
 <div class="form-group mb-3">
-    @Html.LabelFor(x => x.EndTime)
+    @Html.LabelFor(x => x.EndTime, new { @class = "form-label" })
     @await Html.PartialAsync("Components/_Tooltip", "24 hour clock, HH:MM")
     @Html.TextBoxFor(x => x.EndTime, new { @class = "form-control" })
     @Html.ValidationMessageFor(x => x.EndTime)
@@ -67,10 +67,10 @@
     @Html.ValidationMessageFor(x => x.RsvpDeadline)
 </div>
 
-<div class="form-group mb-3">
+@*<div class="form-group mb-3">
     @Html.LabelFor(x => x.Time, new { @class = "form-label" })
     @Html.TextBoxFor(x => x.Time, new { @class = "form-control" })
-</div>
+</div>*@
 
 <div class="form-group mb-3">
     @Html.LabelFor(x => x.Description, new { @class = "form-label" })
@@ -110,43 +110,45 @@
     @Html.ValidationMessageFor(x => x.AttendeeLimit)
 </div>
 
-<h4>
-    Tickets
-    @await Html.PartialAsync("Components/_FeatureTooltip", 
-        new FeatureTooltipViewModel 
-        {
-            Name = "Events.Tickets"
-        })
-</h4>
-<div class="form-group mb-3">
-    @Html.LabelFor(x => x.TicketCost, new { @class = "form-label" })
-    @await Html.PartialAsync("Components/_Tooltip", 
-        "The total ticket cost for this event. Set the max number of attendees above to set the number of tickets.")
-    <div class="input-group">
-        @if (Model.CurrencySymbol != null)
-        {
-            <span class="input-group-text">
-                @Model.CurrencySymbol
-            </span>
-        }
-        @Html.TextBoxFor(x => x.TicketCost, format: "{0:0.00}", new { @class = "form-control", Type = "number" })
-    </div>
-    
-    @Html.ValidationMessageFor(x => x.TicketCost)
-</div>
+<fieldset>
+    <legend>
+        Tickets
+        @await Html.PartialAsync("Components/_FeatureTooltip", 
+            new FeatureTooltipViewModel 
+            {
+                Name = "Events.Tickets"
+            })
+    </legend>
+    <div class="form-group mb-3">
+        @Html.LabelFor(x => x.TicketCost, new { @class = "form-label" })
+        @await Html.PartialAsync("Components/_Tooltip",
+                 "The total ticket cost for this event. Set the max number of attendees above to set the number of tickets.")
+        <div class="input-group">
+            @if (Model.CurrencySymbol != null)
+            {
+                <span class="input-group-text">
+                    @Model.CurrencySymbol
+                </span>
+            }
+            @Html.TextBoxFor(x => x.TicketCost, format: "{0:0.00}", new { @class = "form-control", Type = "number" })
+        </div>
 
-<div class="form-group mb-3">
-    @Html.LabelFor(x => x.TicketDepositCost, new { @class = "form-label" })
-    @await Html.PartialAsync("Components/_Tooltip", 
-        "The deposit cost for this event. Members who pay a deposit will then only need to pay the remainder of the total cost.")
-    <div class="input-group">
-        @if (Model.CurrencySymbol != null)
-        {
-            <span class="input-group-text">
-                @Model.CurrencySymbol
-            </span>
-        }
-        @Html.TextBoxFor(x => x.TicketDepositCost, format: "{0:0.00}", new { @class = "form-control", Type = "number" })
+        @Html.ValidationMessageFor(x => x.TicketCost)
     </div>
-    @Html.ValidationMessageFor(x => x.TicketDepositCost)
-</div>
+
+    <div class="form-group mb-3">
+        @Html.LabelFor(x => x.TicketDepositCost, new { @class = "form-label" })
+        @await Html.PartialAsync("Components/_Tooltip",
+                 "The deposit cost for this event. Members who pay a deposit will then only need to pay the remainder of the total cost.")
+        <div class="input-group">
+            @if (Model.CurrencySymbol != null)
+            {
+                <span class="input-group-text">
+                    @Model.CurrencySymbol
+                </span>
+            }
+            @Html.TextBoxFor(x => x.TicketDepositCost, format: "{0:0.00}", new { @class = "form-control", Type = "number" })
+        </div>
+        @Html.ValidationMessageFor(x => x.TicketDepositCost)
+    </div>
+</fieldset>
