(events): set explicit dates (#42)
* WIP

* Show dates

* Add times to chapter page and lists

* Default end date

* Fix tests

---------

Co-authored-by: Kurt Hamilton <kurt@littlewheel.com>

--- a/ODK.Web.Razor/Views/Shared/Admin/Events/_SettingsContent.cshtml
+++ b/ODK.Web.Razor/Views/Shared/Admin/Events/_SettingsContent.cshtml
@@ -22,8 +22,10 @@
     {
         DefaultDayOfWeek = settings?.DefaultDayOfWeek,
         DefaultDescription = settings?.DefaultDescription,
+        DefaultEndTime = TimeSpanUtils.ToString(settings?.DefaultEndTime),
         DefaultScheduledEmailDayOfWeek = settings?.DefaultScheduledEmailDayOfWeek,
-        DefaultScheduledEmailTimeOfDay = settings?.DefaultScheduledEmailTimeOfDay,
+        DefaultScheduledEmailTimeOfDay = TimeSpanUtils.ToString(settings?.DefaultScheduledEmailTimeOfDay),
+        DefaultStartTime = TimeSpanUtils.ToString(settings?.DefaultStartTime),
         DisableComments = settings?.DisableComments ?? false
     })
     <button class="btn btn-primary">Update</button>
