--- a/ODK.Web.Razor/Views/Shared/Admin/Events/_EventCreateContent.cshtml
+++ b/ODK.Web.Razor/Views/Shared/Admin/Events/_EventCreateContent.cshtml
@@ -1,4 +1,5 @@
-﻿@using ODK.Services
+﻿@using ODK.Core.Utils
+@using ODK.Services
 @using ODK.Services.Chapters
 @using ODK.Services.Events
 @using ODK.Web.Common.Extensions
@@ -14,11 +15,6 @@
     var nextEventDate = await EventAdminService.GetNextAvailableEventDate(request);
     var chapterAdminMembers = await ChapterAdminService.GetChapterAdminMembers(request);
     var chapterPaymentSettings = await ChapterAdminService.GetChapterPaymentSettings(request);
-
-    if (nextEventDate == null)
-    {
-        nextEventDate = DateTime.Today;
-    }
 
     var hostOptions = chapterAdminMembers
         .Select(x => new SelectListItem
@@ -37,9 +33,11 @@
     @await Html.PartialAsync("Admin/Events/_EventForm", new EventFormViewModel
     {
         ChapterId = Model.Id,
+        ChapterName = Model.Name,
         CurrencySymbol = chapterPaymentSettings?.Currency.Symbol,
-        Date = nextEventDate.Value,
+        Date = nextEventDate,
         Description = settings?.DefaultDescription,
+        EndTime = TimeSpanUtils.ToString(settings?.DefaultEndTime),
         HostOptions = hostOptions
     })
     
