--- a/ODK.Web.Razor/Views/Shared/Admin/Events/_EventForm.cshtml
+++ b/ODK.Web.Razor/Views/Shared/Admin/Events/_EventForm.cshtml
@@ -28,15 +28,32 @@
 
 <div class="form-group mb-3 required">
     @Html.LabelFor(x => x.Venue, new { @class = "form-label" })
-    @await Html.PartialAsync("Components/_Tooltip", "Select an existing venue or create a new venue first on the venues page")
+    @await Html.PartialAsync("Components/_Tooltip", "Select an existing venue or create a new venue first on the venues page")    
     @Html.DropDownListFor(x => x.Venue, venueOptions, "", new { @class = "form-select" })
     @Html.ValidationMessageFor(x => x.Venue)
 </div>
 
 <div class="form-group mb-3 required">
     @Html.LabelFor(x => x.Date, new { @class = "form-label" })
-    @Html.TextBoxFor(x => x.Date, format: "{0:dd/MM/yyyy}", new { @class = "form-control", data_datepicker = "" })
+    @await Html.PartialAsync("Components/_Tooltip", "Event date. Start time defaults to value set in event settings")
+    @if (Model.Date.Date == Model.Date)
+    {
+        <a href="/@Model.ChapterName/Admin/Events/Settings">Set default start time</a>
+    }    
+    @Html.TextBoxFor(x => x.Date, format: "{0:dd/MM/yyyy HH:mm}", new 
+    { 
+        @class = "form-control", 
+        data_datepicker = "", 
+        data_datepicker_time = "" 
+    })
     @Html.ValidationMessageFor(x => x.Date)
+</div>
+
+<div class="form-group mb-3">
+    @Html.LabelFor(x => x.EndTime, new { @class = "form-label" })
+    @await Html.PartialAsync("Components/_Tooltip", "24 hour clock, HH:MM")
+    @Html.TextBoxFor(x => x.EndTime, new { @class = "form-control" })
+    @Html.ValidationMessageFor(x => x.EndTime)
 </div>
 
 <div class="form-group mb-3">
@@ -50,10 +67,10 @@
     @Html.ValidationMessageFor(x => x.RsvpDeadline)
 </div>
 
-<div class="form-group mb-3">
+@*<div class="form-group mb-3">
     @Html.LabelFor(x => x.Time, new { @class = "form-label" })
     @Html.TextBoxFor(x => x.Time, new { @class = "form-control" })
-</div>
+</div>*@
 
 <div class="form-group mb-3">
     @Html.LabelFor(x => x.Description, new { @class = "form-label" })
@@ -93,43 +110,45 @@
     @Html.ValidationMessageFor(x => x.AttendeeLimit)
 </div>
 
-<h4>
-    Tickets
-    @await Html.PartialAsync("Components/_FeatureTooltip", 
-        new FeatureTooltipViewModel 
-        {
-            Name = "Events.Tickets"
-        })
-</h4>
-<div class="form-group mb-3">
-    @Html.LabelFor(x => x.TicketCost, new { @class = "form-label" })
-    @await Html.PartialAsync("Components/_Tooltip", 
-        "The total ticket cost for this event. Set the max number of attendees above to set the number of tickets.")
-    <div class="input-group">
-        @if (Model.CurrencySymbol != null)
-        {
-            <span class="input-group-text">
-                @Model.CurrencySymbol
-            </span>
-        }
-        @Html.TextBoxFor(x => x.TicketCost, format: "{0:0.00}", new { @class = "form-control", Type = "number" })
-    </div>
-    
-    @Html.ValidationMessageFor(x => x.TicketCost)
-</div>
+<fieldset>
+    <legend>
+        Tickets
+        @await Html.PartialAsync("Components/_FeatureTooltip", 
+            new FeatureTooltipViewModel 
+            {
+                Name = "Events.Tickets"
+            })
+    </legend>
+    <div class="form-group mb-3">
+        @Html.LabelFor(x => x.TicketCost, new { @class = "form-label" })
+        @await Html.PartialAsync("Components/_Tooltip",
+                 "The total ticket cost for this event. Set the max number of attendees above to set the number of tickets.")
+        <div class="input-group">
+            @if (Model.CurrencySymbol != null)
+            {
+                <span class="input-group-text">
+                    @Model.CurrencySymbol
+                </span>
+            }
+            @Html.TextBoxFor(x => x.TicketCost, format: "{0:0.00}", new { @class = "form-control", Type = "number" })
+        </div>
 
-<div class="form-group mb-3">
-    @Html.LabelFor(x => x.TicketDepositCost, new { @class = "form-label" })
-    @await Html.PartialAsync("Components/_Tooltip", 
-        "The deposit cost for this event. Members who pay a deposit will then only need to pay the remainder of the total cost.")
-    <div class="input-group">
-        @if (Model.CurrencySymbol != null)
-        {
-            <span class="input-group-text">
-                @Model.CurrencySymbol
-            </span>
-        }
-        @Html.TextBoxFor(x => x.TicketDepositCost, format: "{0:0.00}", new { @class = "form-control", Type = "number" })
+        @Html.ValidationMessageFor(x => x.TicketCost)
     </div>
-    @Html.ValidationMessageFor(x => x.TicketDepositCost)
-</div>
+
+    <div class="form-group mb-3">
+        @Html.LabelFor(x => x.TicketDepositCost, new { @class = "form-label" })
+        @await Html.PartialAsync("Components/_Tooltip",
+                 "The deposit cost for this event. Members who pay a deposit will then only need to pay the remainder of the total cost.")
+        <div class="input-group">
+            @if (Model.CurrencySymbol != null)
+            {
+                <span class="input-group-text">
+                    @Model.CurrencySymbol
+                </span>
+            }
+            @Html.TextBoxFor(x => x.TicketDepositCost, format: "{0:0.00}", new { @class = "form-control", Type = "number" })
+        </div>
+        @Html.ValidationMessageFor(x => x.TicketDepositCost)
+    </div>
+</fieldset>
