(events): show events with no end time as "From X"

--- a/ODK.Web.Razor/Views/Shared/Events/_EventContent.cshtml
+++ b/ODK.Web.Razor/Views/Shared/Events/_EventContent.cshtml
@@ -35,7 +35,13 @@
 @if (localTime.TimeOfDay.TotalSeconds > 0)
 {
     <h5>
+        @if (Model.Event.EndTime == null)
+        {
+            <span>From</span>
+        }
+
         <span>@localTime.ToString("HH:mm")</span>
+
         @if (Model.Event.EndTime != null)
         {
             <span>-</span>
