--- a/ODK.Web.Razor/Views/Shared/Events/_ListEvent.cshtml
+++ b/ODK.Web.Razor/Views/Shared/Events/_ListEvent.cshtml
@@ -23,7 +23,13 @@
     <span>@localTime.ToFriendlyDateString(null)</span>
     @if (localTime.TimeOfDay.TotalSeconds > 0)
     {
+        @if (Model.Event.EndTime == null)
+        {
+            <span>From</span>
+        }
+
         <span>@TimeSpanUtils.ToString(localTime.TimeOfDay)</span>
+
         @if (Model.Event.EndTime != null)
         {
             <span>-</span>
