--- a/ODK.Web.Razor/Views/Shared/Events/_ListEvent2.cshtml
+++ b/ODK.Web.Razor/Views/Shared/Events/_ListEvent2.cshtml
@@ -32,21 +32,7 @@
     <div class="card-body">
         <div>
             <span>@localTime.ToFriendlyDateString(null)</span>
-            @if (localTime.TimeOfDay.TotalSeconds > 0)
-            {
-                @if (Model.Event.EndTime == null)
-                {
-                    <span>From</span>
-                }
-
-                <span>@TimeSpanUtils.ToString(localTime.TimeOfDay)</span>
-
-                @if (Model.Event.EndTime != null)
-                {
-                    <span>-</span>
-                    <span>@TimeSpanUtils.ToString(Model.Event.EndTime)</span>
-                }
-            }
+            <span>@Event.ToLocalTimeString(Model.Event.Date, Model.Event.EndTime, Model.Chapter.TimeZone)</span>
         </div>
         <div>
             @await Html.PartialAsync("Components/_Location", Model.Event.VenueName)
