--- a/ODK.Web.Razor/Views/Shared/Groups/_GroupContent.cshtml
+++ b/ODK.Web.Razor/Views/Shared/Groups/_GroupContent.cshtml
@@ -31,7 +31,7 @@
                     Action = $"/admin/groups/{Model.Chapter.Id}/texts/welcome",
                     Id = "group-texts-welcome",
                     IsAdmin = Model.IsAdmin,
-                    Name = "texts-welcome",
+                    Name = "text",
                     Text = Model.Texts?.WelcomeText,
                     Title = "Join us"
                 })
