--- a/ODK.Web.Razor/Views/Shared/Groups/_GroupContentSidebar.cshtml
+++ b/ODK.Web.Razor/Views/Shared/Groups/_GroupContentSidebar.cshtml
@@ -11,7 +11,7 @@
 }
 
 <div class="text-end">
-    Joined @Model.Chapter.CreatedUtc.ToFriendlyDateString(Model.CurrentMember?.TimeZone ?? Model.Chapter.TimeZone)
+    Going since @Model.Chapter.CreatedUtc.ToFriendlyDateString(Model.CurrentMember?.TimeZone ?? Model.Chapter.TimeZone)
 </div>
 <div class="text-end">
     <i class="fa-solid fa-users"></i>
