(groups): join a group (#43)
* WIP

* WIP

* WIP

* WIP

---------

Co-authored-by: Kurt Hamilton <kurt@littlewheel.com>

--- a/ODK.Web.Razor/Pages/Account/ForgottenPassword.cshtml
+++ b/ODK.Web.Razor/Pages/Account/ForgottenPassword.cshtml
@@ -13,7 +13,7 @@
     Title = "Forgotten password",
     Breadcrumbs = new[]
     {
-        new MenuItem { Link = "/Account/Login", Text = "Login" },
+        new MenuItem { Link = "/account/login", Text = "Login" },
         new MenuItem { Text = "Forgotten password" }
     },
     ContentFunc = 
