--- a/ODK.Web.Razor/Views/Shared/Groups/_GroupMenu.cshtml
+++ b/ODK.Web.Razor/Views/Shared/Groups/_GroupMenu.cshtml
@@ -13,6 +13,16 @@
         new MenuItem { Text = "Members", Link = OdkRoutes2.Groups.Members(Model.Chapter) }
     };
 
+    if (Model.HasQuestions || Model.IsAdmin)
+    {
+        menuItems.Add(new MenuItem { Text = "FAQ", Link = OdkRoutes2.Groups.Questions(Model.Chapter) });
+    }
+
+    if (Model.IsMember)
+    {
+        menuItems.Add(new MenuItem { Text = "My profile", Link = OdkRoutes2.Groups.Profile(Model.Chapter) });
+    }
+
     var id = "nav-group";
 }
 
@@ -26,7 +36,7 @@
             </button>
         </div>
 
-        <div class="collapse navbar-collapse" id="@id">
+        <div class="collapse navbar-collapse me-auto" id="@id">
             <ul class="navbar-nav">
                 @foreach (var menuItem in menuItems)
                 {
@@ -40,5 +50,10 @@
                 }
             </ul>
         </div>
+
+        @if (!Model.IsMember)
+        {
+            <a href="@OdkRoutes2.Groups.Join(Model.Chapter)" class="btn btn-success">Join</a>
+        }
     </div>
 </nav>
