--- a/ODK.Web.Razor/Views/Shared/Events/_EventList2.cshtml
+++ b/ODK.Web.Razor/Views/Shared/Events/_EventList2.cshtml
@@ -8,7 +8,7 @@
 <div class="row">
     @foreach (var @event in events)
     {
-        <div class="col-12 col-md-4 mb-3 mb-md-0">
+        <div class="col-12 col-md-4 mb-3">
             @await Html.PartialAsync("Events/_ListEvent2", new ListEventViewModel
             {
                 Chapter = Model.Chapter,
