--- a/ODK.Web.Razor/Views/Shared/Admin/Members/_SubscriptionsContent.cshtml
+++ b/ODK.Web.Razor/Views/Shared/Admin/Members/_SubscriptionsContent.cshtml
@@ -63,6 +63,7 @@
     {
         Enabled = membershipSettings?.Enabled ?? false,
         MembershipDisabledAfter = membershipSettings?.MembershipDisabledAfterDaysExpired ?? 0,
+        MembershipExpiringWarningDays = membershipSettings?.MembershipExpiringWarningDays ?? 0,
         TrialPeriodMonths = membershipSettings?.TrialPeriodMonths ?? 0
     })
     <button class="btn btn-primary">Update</button>
